[project]
name = "cs-9223-rai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "seaborn",
    "pandas",
    "numpy",
    "scikit-learn",
    "folktables",
    "fairlearn",
    "ipython",
    "ucimlrepo>=0.0.7",
    "comm>=0.2.3",
    "ipykernel>=7.1.0",
]
